--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@ title: 404 Error | Sorry, this page does not exist.
                 <br>
                 <br>
         	<h1>That's a 404 Error</h1>
-        	<p>Hi, I'm sorry, but the page you're trying to access doesn't exist. Try <a href="/" title="Ninell">going back to the homepage</a>.</p>
+        	<p>Hi, I'm sorry, but the page you're trying to access doesn't exist. Try <a href="/" title="going back to the homepage">going back to the homepage</a>.</p>
                 </div>
                 <br>
                 <br>   
