--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <nav>
         <ul>
             <li><a href="index.html">home</a></li>
-	        <li><a href="../docs/CV.pdf" target="_blank">CV</a></li>
-            <li><a href="alignment/sense.html">research</a></li>
+	        <li><a href="docs/CV.pdf" target="_blank">CV</a></li>
+            <li><a href="pages/alignment/sense.html">research</a></li>
         </ul>
     </nav>
     <div class="container">
