--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hello, I'm Ninell</title>
-    <link rel="stylesheet" type="text/css" href="../css/styles.css">
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair Display:wght@100;300&display=swap" rel="stylesheet">
@@ -38,7 +38,7 @@
             And here's a picture of my face:
         </p>
 			<div class="image-container" align="center">
-				<img src="../images/ninell.jpg" alt="hello" width="350" height=auto>
+				<img src="images/ninell.jpg" alt="hello" width="350" height=auto>
 			</div>
     </div>
     <footer>
