--- a/index.html
+++ b/index.html
@@ -4,20 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hello, I'm Ninell</title>
-    <link rel="stylesheet" type="text/css" href="css/styles.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair Display:wght@100;300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/color-index.css">
     <link rel="shortcut icon" type="image/x-icon" href="../images/favicon.ico">
 </head>
 <body>
     <nav>
         <ul>
-            <li><a href="index.html">home</a></li>
-	        <li><a href="docs/CV.pdf" target="_blank">CV</a></li>
-            <li><a href="pages/alignment/sense.html">research</a></li>
+          <li><a href="index.html">home</a></li>
+          <li><a href="docs/CV.pdf" target="_blank">CV</a></li>
+          <li class="dropdown">
+            <a href="pages/research.html">research</a>
+            <ul class="dropdown-content">
+              <li><a href="pages/alignment/debates.html">debates</a></li>
+            </ul>
+          </li>
         </ul>
-    </nav>
+      </nav>
     <div class="container">
         <h1>Ninell (she/her)</h1>
         <p>
