--- a/pages/alignment/debates.html
+++ b/pages/alignment/debates.html
@@ -237,6 +237,7 @@
     </style>
 </head>
 <body>
+    <h1>debates</h1>
     <img src="pics/bullshit.jpg" alt="ChatGPT is bullshit" class="bullshit">
     <img src="pics/cows.jpg" alt="Are cows more likely to fall down the longer they stand?" class="cows">
     <img src="pics/nuance.jpg" alt="Fuck Nuance" class="nuance">
