--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
             Other than that, I like live music, running, & maps.
         </p>
         <p>
-            Please reach out if you want to collaborate, play <a href="https://www.geoguessr.com/user/62058b76888c7d000122d52c" 
-            target="_blank">geoguessr</a>, or go to a gig together!
+            Please reach out if you want to collaborate, play geoguessr, or go to a gig together!
         </p>
         <p>
             And here's a picture of my face:
