update link target

--- a/pages/research.html
+++ b/pages/research.html
@@ -35,7 +35,7 @@
     <div class="container">
         <h1>work in progress</h1>
         <p>
-            <a href="alignment/sense.html" target="_blank">debates</a>
+            <a href="alignment/debates.html" target="_blank">debates</a>
         </p>
     </div>
     <footer>
