--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
           <li><a href="index.html">home</a></li>
           <li><a href="docs/CV.pdf" target="_blank">CV</a></li>
           <li class="dropdown">
-            <a href="pages/research.html">research</a>
+            <a href="pages/work.html">work</a>
             <ul class="dropdown-content">
-              <li><a href="pages/alignment/debates.html">debates</a></li>
+              <li><a href="pages/alignment/debates.html" target="_blank">debates</a></li>
             </ul>
           </li>
         </ul>
