--- a/pages/work.html
+++ b/pages/work.html
@@ -46,13 +46,14 @@
         <h1>
           Journalism
         </h1>
+        Some examples!
           <ul>
             <li>
-              2021. <i>My friends, the anti-vaxxers [Meine Freunde, die Querdenker]</i>. Die Freiheitsliebe. 
+              2021. <i>My Friends, Anti-Vaxxers [Meine Freunde, die Querdenker]</i>. Die Freiheitsliebe. 
               <a href="https://diefreiheitsliebe.de/gesellschaft/meine-freunde-die-querdenker/" target="_blank" class="btn">Link</a>
             </li>
             <li>
-              2017-2020. Column <i>Nelli listens to music [Nelli hört Musik]</i>. Kiez und Kneipe Berlin.
+              2017-2020. Column <i>Nelli Listens to Music [Nelli hört Musik]</i>. Kiez und Kneipe Berlin.
               <a href="https://www.kiezundkneipe.de/ressorts/kultur/nelli-hoert-musik" target="_blank" class="btn">Link</a>
             </li>
             <li>
@@ -61,7 +62,7 @@
             </li>
           </ul>
 
-        <h1>Research Art</h1>
+        <h1>Art</h1>
           <ul>
             <li>2024. <i>Debates</i>. The dangers of artificial intelligence. Work in progress ;) <a href="alignment/debates.html" target="_blank" class="btn">Link</a></li>
           </ul>
