--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
           <li><a href="docs/CV.pdf" target="_blank">CV</a></li>
           <li class="dropdown">
             <a href="pages/work.html">work</a>
-            <ul class="dropdown-content">
+            <!-- <ul class="dropdown-content">
               <li><a href="pages/alignment/debates.html" target="_blank">debates</a></li>
             </ul>
+            -->
           </li>
         </ul>
       </nav>
