--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         <p>
             I'm a first-year PhD student at the Centre for Philosophy of AI at the University of Copenhagen 
             supervised by <a href="https://anderssoegaard.github.io/" target="_blank">Anders Søgaard</a>. 
-            I'm trying to find out how to use language models best to learn about human decision-making, 
-            language use, or cooperation! For this, I like to draw inspiration from related fields 
+            I'm trying to find out how to use language models best to learn about human cooperation, 
+            language use, and decision-making! For this, I like to draw inspiration from related fields 
             such as (currently) explainability, neuro-symbolic computing, and bio-inspired AI.
         </p>
         <p>
