update art description

--- a/pages/work.html
+++ b/pages/work.html
@@ -64,7 +64,7 @@
 
         <h1>Art</h1>
           <ul>
-            <li>2024. <i>Debates</i>. The dangers of artificial intelligence. Work in progress ;) <a href="alignment/debates.html" target="_blank" class="btn">Link</a></li>
+            <li>2024. <i>Debates</i>. Work in progress ;) <a href="alignment/debates.html" target="_blank" class="btn">Link</a></li>
           </ul>
       </div>
     </div>
