update work description

--- a/pages/work.html
+++ b/pages/work.html
@@ -49,15 +49,15 @@
         Some examples!
           <ul>
             <li>
-              2021. <i>My Friends, Anti-Vaxxers [Meine Freunde, die Querdenker]</i>. Die Freiheitsliebe. 
+              2021. <i>My Friends, Anti-Vaxxers. [Meine Freunde, die Querdenker]</i>. Die Freiheitsliebe. 
               <a href="https://diefreiheitsliebe.de/gesellschaft/meine-freunde-die-querdenker/" target="_blank" class="btn">Link</a>
             </li>
             <li>
-              2017-2020. Column <i>Nelli Listens to Music [Nelli hört Musik]</i>. Kiez und Kneipe Berlin.
+              2017-2020. Column <i>Nelli Listens to Music. [Nelli hört Musik]</i>. Kiez und Kneipe Berlin.
               <a href="https://www.kiezundkneipe.de/ressorts/kultur/nelli-hoert-musik" target="_blank" class="btn">Link</a>
             </li>
             <li>
-              2019. <i>My East [Mein Osten]</i>. Kiez und Kneipe Berlin.
+              2019. <i>My East. [Mein Osten]</i>. Kiez und Kneipe Berlin.
               <a href="https://www.kiezundkneipe.de/artikel/mein-osten" target="_blank" class="btn">Link</a>
             </li>
           </ul>
