--- a/pages/work.html
+++ b/pages/work.html
@@ -13,9 +13,10 @@
           <li><a href="../index.html">home</a></li>
           <li class="dropdown">
             <a href="work.html">work</a>
-            <ul class="dropdown-content">
+            <!-- <ul class="dropdown-content">
               <li><a href="alignment/debates.html" target="_blank">debates</a></li>
             </ul>
+            -->
           </li>
           <li><a href="../docs/CV.pdf" target="_blank">CV</a></li>
         </ul>
