--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
         <p>
             I'm a first-year PhD student at the Centre for Philosophy of AI at the University of Copenhagen 
             supervised by <a href="https://anderssoegaard.github.io/" target="_blank">Anders Søgaard</a>. 
-            I'm trying to find out how to use language models best to learn about human cooperation and 
-            language use! For this, I like to draw inspiration from related fields 
-            such as (currently) explainability, neuro-symbolic computing, and bio-inspired AI.
+            I'm trying to find out how to use computational models best to learn about cooperation and 
+            how to use this knowledge to make models cooperate with us! For this, I like to draw inspiration 
+            from related fields such as linguistics, explainability, or computational cognitive sciences.
         </p>
         <p>
             Other than that, I like live music, running, & maps.
