--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             supervised by <a href="https://anderssoegaard.github.io/" target="_blank">Anders Søgaard</a>. 
             I'm trying to find out how to use computational models best to learn about cooperation and 
             how to use this knowledge to make models cooperate with us! For this, I like to draw inspiration 
-            from related fields such as linguistics, explainability, or computational cognitive sciences.
+            from related fields such as linguistics, explainability, or computational cognitive science.
         </p>
         <p>
             Other than that, I like live music, running, & maps.
