--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </ul>
             -->
           </li>
-          <li><a href="docs/CV.pdf" target="_blank">CV</a></li>
+          <li><a href="docs/CV.pdf" target="_blank">cv</a></li>
         </ul>
       </nav>
     <div class="container">
