--- a/pages/work.html
+++ b/pages/work.html
@@ -31,16 +31,16 @@
         <h1>Research</h1>
           <ul>
             <li>
+              <b>Ninell Oldenburg</b>. 2024. Navigating the Informativeness-Compression Trade-Off in Explainability.
+              Talk at the IACAP 2024 Conference.
+            </li>
+            <li>
               <b>Ninell Oldenburg</b> and Tan Zhi-Xuan. 2024. <i>Learning and Sustaining Shared
               Normative Systems via Bayesian Rule Induction in Markov Games</i>. In Proc.
               of the 23rd International Conference on Autonomous Agents and Multiagent
               Systems.
               <a href="https://arxiv.org/abs/2402.13399" target="_blank" class="btn">Arxiv</a> 
               <a href="https://arxiv.org/pdf/2402.13399" target="_blank" class="btn">PDF</a>
-            </li>
-            <li>
-              <b>Ninell Oldenburg</b>. 2024. Navigating the Informativeness-Compression Trade-Off in Explainability.
-              Talk at the International Association for Computing and Philosophy.
             </li>
           </ul>
 
