--- a/pages/work.html
+++ b/pages/work.html
@@ -32,7 +32,7 @@
           <ul>
             <li>
               <b>Ninell Oldenburg</b>. 2024. Navigating the Informativeness-Compression Trade-Off in Explainability.
-              Talk at the IACAP 2024 Conference.
+              Talk at the International Association for Computing and Philosophy (IACAP) 2024 Conference.
             </li>
             <li>
               <b>Ninell Oldenburg</b> and Tan Zhi-Xuan. 2024. <i>Learning and Sustaining Shared
