--- a/pages/work.html
+++ b/pages/work.html
@@ -32,13 +32,18 @@
           <ul>
             <li>
               <b>Ninell Oldenburg</b>. 2024. Navigating the Informativeness-Compression Trade-Off in Explainability.
-              Talk at the International Association for Computing and Philosophy (IACAP) 2024 Conference.
+              Talk at the International Association for Computing and Philosophy (IACAP) 2024 Conference. University of Oregon Eugene.
+            </li>
+            <li>
+              <b>Ninell Oldenburg</b>, Ruchira Dahr. 2024. The Completeness Problem: Beyond Human Metrics in 
+              Assessing Abilities of Cognitive Systems. Poster at the 1st Philosophy of AI Summer School. 
+              University College London, Paris.
             </li>
             <li>
               <b>Ninell Oldenburg</b> and Tan Zhi-Xuan. 2024. <i>Learning and Sustaining Shared
               Normative Systems via Bayesian Rule Induction in Markov Games</i>. In Proc.
               of the 23rd International Conference on Autonomous Agents and Multiagent
-              Systems.
+              Systems. University of Auckland.
               <a href="https://arxiv.org/abs/2402.13399" target="_blank" class="btn">Arxiv</a> 
               <a href="https://arxiv.org/pdf/2402.13399" target="_blank" class="btn">PDF</a>
             </li>
