--- a/pages/work.html
+++ b/pages/work.html
@@ -36,7 +36,7 @@
               University of Oregon Eugene, USA.
             </li>
             <li>
-              <b>Ninell Oldenburg</b>, Ruchira Dahr. 2024. The Completeness Problem: Beyond Human Metrics in 
+              <b>Ninell Oldenburg</b> and Ruchira Dahr. 2024. The Completeness Problem: Beyond Human Metrics in 
               Assessing Abilities of Cognitive Systems. Poster at the 1st Philosophy of AI Summer School. 
               University College London, Paris, France.
             </li>
