--- a/pages/work.html
+++ b/pages/work.html
@@ -37,7 +37,7 @@
             </li>
             <li>
               <b>Ninell Oldenburg</b> and Ruchira Dahr. 2024. The Completeness Problem: Beyond Human Metrics in 
-              Assessing Abilities of Cognitive Systems. Poster at the 1st Philosophy of AI Summer School. 
+              Assessing Abilities of Cognitive Systems. Poster at the Philosophy of AI Summer School. 
               University College London, Paris, France.
             </li>
             <li>
