set title in italics

--- a/pages/work.html
+++ b/pages/work.html
@@ -31,13 +31,13 @@
         <h1>Research</h1>
           <ul>
             <li>
-              <b>Ninell Oldenburg</b>. 2024. Navigating the Informativeness-Compression Trade-Off in Explainability.
+              <b>Ninell Oldenburg</b>. 2024. <i>Navigating the Informativeness-Compression Trade-Off in Explainability</i>.
               Talk at the International Association for Computing and Philosophy (IACAP) 2024 Conference. 
               University of Oregon Eugene, USA.
             </li>
             <li>
-              <b>Ninell Oldenburg</b> and Ruchira Dahr. 2024. The Completeness Problem: Beyond Human Metrics in 
-              Assessing Abilities of Cognitive Systems. Poster at the Philosophy of AI Summer School. 
+              <b>Ninell Oldenburg</b> and Ruchira Dahr. 2024. <i>The Completeness Problem: Beyond Human Metrics in 
+              Assessing Abilities of Cognitive Systems</i>. Poster at the Philosophy of AI Summer School. 
               University College London, Paris, France.
             </li>
             <li>
