--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <p>
             I'm a first-year PhD student at the Centre for Philosophy of AI at the University of Copenhagen 
             supervised by <a href="https://anderssoegaard.github.io/" target="_blank">Anders Søgaard</a>. 
-            I'm interested in how computational models are embedded in our cultural and political world, how 
+            I'm interested in how computational models are embedded in our cultural and political world, what 
             features they share with humans, and how we can make them cooperate with us! For this, I like to draw 
             inspiration from related fields such as linguistics, explainability, or computational cognitive science.
         </p>
