flex image container

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             And here's a picture of my face:
         </p>
 			<div class="image-container" align="center">
-				<img src="images/ninell.jpg" alt="hello" width="350" height=auto>
+				<img src="images/ninell.jpg" alt="hello" width="350" height=auto display=flex>
 			</div>
     </div>
     <footer>
