--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </ul>
       </nav>
     <div class="container">
-        <h1>Ninell (she/her)</h1>
+        <h1>Ninell (she)</h1>
         <p>
             I'm a first-year PhD student at the Centre for Philosophy of AI at the University of Copenhagen 
             supervised by <a href="https://anderssoegaard.github.io/" target="_blank">Anders Søgaard</a>. 
