--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
     <div class="container">
         <h1>Ninell (she)</h1>
         <p>
-            I'm a first-year PhD student at the Centre for Philosophy of AI at the University of Copenhagen 
+            I'm a first-year PhD student at the <a href="https://cpaicopenhagen.wordpress.com/" 
+            target="_blank">Centre for Philosophy of AI</a> at the University of Copenhagen 
             supervised by <a href="https://anderssoegaard.github.io/" target="_blank">Anders Søgaard</a>. 
             I'm interested in how computational models are embedded in our cultural and political world, what 
             features they share with humans, and how we can make them cooperate with us! For this, I like to draw 
