--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="container">
         <h1>Ninell (she)</h1>
         <p>
-            I'm a first-year PhD student at the <a href="https://cpaicopenhagen.wordpress.com/" 
+            I'm a second-year PhD student at the <a href="https://cpaicopenhagen.wordpress.com/" 
             target="_blank">Center for Philosophy of AI</a> at the University of Copenhagen 
             supervised by <a href="https://anderssoegaard.github.io/" target="_blank">Anders Søgaard</a>. 
             I'm interested in how computational models are embedded in our cultural and political world, what 
