--- a/pages/work.html
+++ b/pages/work.html
@@ -28,17 +28,12 @@
           angles. This includes research, journalism, blogging, and art.
         </p>
 
-        <h1>Research</h1>
+        <h1>Publications</h1>
           <ul>
             <li>
-              <b>Ninell Oldenburg</b>. 2024. <i>Navigating the Informativeness-Compression Trade-Off in Explainability</i>.
-              Talk at the International Association for Computing and Philosophy (IACAP) 2024 Conference. 
-              University of Oregon Eugene, USA.
-            </li>
-            <li>
-              <b>Ninell Oldenburg</b> and Ruchira Dahr. 2024. <i>The Completeness Problem: Beyond Human Metrics in 
-              Assessing Abilities of Cognitive Systems</i>. Poster at the 1st Philosophy of AI Summer School. 
-              University College London, Paris, France.
+              <b>Ninell Oldenburg</b> and Anders Søgaard. 2025. <i>Navigating the Informativeness-
+                Compression Trade-Off in XAI</i>.
+              AI & Ethics (forthcoming).
             </li>
             <li>
               <b>Ninell Oldenburg</b> and Tan Zhi-Xuan. 2024. <i>Learning and Sustaining Shared
@@ -50,11 +45,24 @@
             </li>
           </ul>
 
-        <h1>
-          Journalism
-        </h1>
-        Some examples!
+          <h1>Recorded Talks)</h1>
           <ul>
+            <li>
+              2025. <i>Philosophical Commitments to LLM Evaluations: The Problem of 
+                Moving Goalposts and Observational Relativity</i>. AI & Humanity Lab Hong Kong Seminar Series.
+              <a href="https://www.youtube.com/watch?v=w6XTWLMip88" target="_blank" class="btn">YouTube</a> 
+            </li>
+          </ul>
+
+        <h1>
+          Journalism (selected)
+        </h1>
+          <ul>
+            <li>
+              2025. <i>Is there someone behind the screen? Researchers are divided on AI consciousness</i>. 
+              ScienceNordic. 
+              <a href="https://www.sciencenordic.com/artificial-intelligence-brain-computers/is-there-someone-behind-the-screen-researchers-are-divided-on-ai-consciousness/2482914" target="_blank" class="btn">Link</a>
+            </li>
             <li>
               2021. <i>My Friends, Anti-Vaxxers. [Meine Freunde, die Querdenker]</i>. Die Freiheitsliebe. 
               <a href="https://diefreiheitsliebe.de/gesellschaft/meine-freunde-die-querdenker/" target="_blank" class="btn">Link</a>
@@ -62,10 +70,6 @@
             <li>
               2017-2020. Column <i>Nelli Listens to Music. [Nelli hört Musik]</i>. Kiez und Kneipe Berlin.
               <a href="https://www.kiezundkneipe.de/ressorts/kultur/nelli-hoert-musik" target="_blank" class="btn">Link</a>
-            </li>
-            <li>
-              2019. <i>My East. [Mein Osten]</i>. Kiez und Kneipe Berlin.
-              <a href="https://www.kiezundkneipe.de/artikel/mein-osten" target="_blank" class="btn">Link</a>
             </li>
           </ul>
 
