--- a/pages/work.html
+++ b/pages/work.html
@@ -52,6 +52,10 @@
                 Moving Goalposts and Observational Relativity</i>. AI & Humanity Lab Hong Kong Seminar Series.
               <a href="https://www.youtube.com/watch?v=w6XTWLMip88" target="_blank" class="btn">YouTube</a> 
             </li>
+            <li>
+              2023. <i>Learning and Sustaining Social Norms as Normative Equilibria</i>. PIBBSS Symposium.
+              <a href="https://www.youtube.com/watch?v=u4sAGSbXZqQ" target="_blank" class="btn">YouTube</a> 
+            </li>
           </ul>
 
         <h1>
