not really a change

--- a/pages/work.html
+++ b/pages/work.html
@@ -32,8 +32,7 @@
           <ul>
             <li>
               <b>Ninell Oldenburg</b> and Anders Søgaard. 2025. <i>Navigating the Informativeness-
-                Compression Trade-Off in XAI</i>.
-              AI & Ethics (forthcoming).
+                Compression Trade-Off in XAI</i>. AI & Ethics (forthcoming).
             </li>
             <li>
               <b>Ninell Oldenburg</b> and Tan Zhi-Xuan. 2024. <i>Learning and Sustaining Shared
