--- a/pages/work.html
+++ b/pages/work.html
@@ -44,7 +44,7 @@
             </li>
           </ul>
 
-          <h1>Recorded Talks)</h1>
+          <h1>Recorded Talks</h1>
           <ul>
             <li>
               2025. <i>Philosophical Commitments to LLM Evaluations: The Problem of 
