--- a/pages/work.html
+++ b/pages/work.html
@@ -48,12 +48,12 @@
           <ul>
             <li>
               2025. <i>Philosophical Commitments to LLM Evaluations: The Problem of 
-                Moving Goalposts and Observational Relativity</i>. AI & Humanity Lab Hong Kong
-              <a href="https://www.youtube.com/watch?v=w6XTWLMip88" target="_blank" class="btn">Seminar Series</a>
+                Moving Goalposts and Observational Relativity</i>. AI & Humanity Lab Hong Kong.
+              <a href="https://www.youtube.com/watch?v=w6XTWLMip88" target="_blank" class="btn">Seminar Series.</a>
             </li>
             <li>
               2023. <i>Learning and Sustaining Social Norms as Normative Equilibria</i>.
-              <a href="https://www.youtube.com/watch?v=u4sAGSbXZqQ" target="_blank" class="btn">PIBBSS Symposium</a> 
+              <a href="https://www.youtube.com/watch?v=u4sAGSbXZqQ" target="_blank" class="btn">PIBBSS Symposium.</a> 
             </li>
           </ul>
 
@@ -63,15 +63,15 @@
           <ul>
             <li>
               2025. <i>Is there someone behind the screen? Researchers are divided on AI consciousness</i>.
-              <a href="https://www.sciencenordic.com/artificial-intelligence-brain-computers/is-there-someone-behind-the-screen-researchers-are-divided-on-ai-consciousness/2482914" target="_blank" class="btn">ScienceNordic</a>
+              <a href="https://www.sciencenordic.com/artificial-intelligence-brain-computers/is-there-someone-behind-the-screen-researchers-are-divided-on-ai-consciousness/2482914" target="_blank" class="btn">ScienceNordic.</a>
             </li>
             <li>
               2021. <i>My Friends, Anti-Vaxxers. [Meine Freunde, die Querdenker]</i>. 
-              <a href="https://diefreiheitsliebe.de/gesellschaft/meine-freunde-die-querdenker/" target="_blank" class="btn">Die Freiheitsliebe</a>
+              <a href="https://diefreiheitsliebe.de/gesellschaft/meine-freunde-die-querdenker/" target="_blank" class="btn">Die Freiheitsliebe.</a>
             </li>
             <li>
               2017-2020. Column <i>Nelli Listens to Music. [Nelli hört Musik]</i>.
-              <a href="https://www.kiezundkneipe.de/ressorts/kultur/nelli-hoert-musik" target="_blank" class="btn">Kiez und Kneipe Berlin</a>
+              <a href="https://www.kiezundkneipe.de/ressorts/kultur/nelli-hoert-musik" target="_blank" class="btn">Kiez und Kneipe Berlin<./a>
             </li>
           </ul>
 
