--- a/pages/work.html
+++ b/pages/work.html
@@ -71,7 +71,7 @@
             </li>
             <li>
               2017-2020. Column <i>Nelli Listens to Music. [Nelli hört Musik]</i>.
-              <a href="https://www.kiezundkneipe.de/ressorts/kultur/nelli-hoert-musik" target="_blank" class="btn">Kiez und Kneipe Berlin<./a>
+              <a href="https://www.kiezundkneipe.de/ressorts/kultur/nelli-hoert-musik" target="_blank" class="btn">Kiez und Kneipe Berlin.</a>
             </li>
           </ul>
 
