--- a/pages/work.html
+++ b/pages/work.html
@@ -47,13 +47,13 @@
           <h1>Recorded Talks</h1>
           <ul>
             <li>
-              2025. <i>Philosophical Commitments to LLM Evaluations: The Problem of 
-                Moving Goalposts and Observational Relativity</i>. AI & Humanity Lab Hong Kong.
-              <a href="https://www.youtube.com/watch?v=w6XTWLMip88" target="_blank" class="btn">Seminar Series.</a>
+              Philosophical Commitments to LLM Evaluations: The Problem of 
+                Moving Goalposts and Observational Relativity. AI & Humanity Lab Hong Kong.
+              <a href="https://www.youtube.com/watch?v=w6XTWLMip88" target="_blank" class="btn">Seminar Series 2025.</a>
             </li>
             <li>
-              2023. <i>Learning and Sustaining Social Norms as Normative Equilibria</i>.
-              <a href="https://www.youtube.com/watch?v=u4sAGSbXZqQ" target="_blank" class="btn">PIBBSS Symposium.</a> 
+              Learning and Sustaining Social Norms as Normative Equilibria.
+              <a href="https://www.youtube.com/watch?v=u4sAGSbXZqQ" target="_blank" class="btn">PIBBSS Symposium 2023.</a> 
             </li>
           </ul>
 
