--- a/pages/work.html
+++ b/pages/work.html
@@ -62,15 +62,15 @@
         </h1>
           <ul>
             <li>
-              2025. <i>Is there someone behind the screen? Researchers are divided on AI consciousness</i>.
+              Is there someone behind the screen? Researchers are divided on AI consciousness.
               <a href="https://www.sciencenordic.com/artificial-intelligence-brain-computers/is-there-someone-behind-the-screen-researchers-are-divided-on-ai-consciousness/2482914" target="_blank" class="btn">ScienceNordic.</a>
             </li>
             <li>
-              2021. <i>My Friends, Anti-Vaxxers. [Meine Freunde, die Querdenker]</i>. 
+              My Friends, Anti-Vaxxers. [Meine Freunde, die Querdenker]. 
               <a href="https://diefreiheitsliebe.de/gesellschaft/meine-freunde-die-querdenker/" target="_blank" class="btn">Die Freiheitsliebe.</a>
             </li>
             <li>
-              2017-2020. Column <i>Nelli Listens to Music. [Nelli hört Musik]</i>.
+              Column Nelli Listens to Music. [Nelli hört Musik].
               <a href="https://www.kiezundkneipe.de/ressorts/kultur/nelli-hoert-musik" target="_blank" class="btn">Kiez und Kneipe Berlin.</a>
             </li>
           </ul>
