--- a/pages/work.html
+++ b/pages/work.html
@@ -62,7 +62,7 @@
         </h1>
           <ul>
             <li>
-              Is there someone behind the screen? Researchers are divided on AI consciousness.
+              Someone Behind the Screen? Researchers Are Divided on AI Consciousness.
               <a href="https://www.sciencenordic.com/artificial-intelligence-brain-computers/is-there-someone-behind-the-screen-researchers-are-divided-on-ai-consciousness/2482914" target="_blank" class="btn">ScienceNordic.</a>
             </li>
             <li>
