--- a/pages/work.html
+++ b/pages/work.html
@@ -48,8 +48,8 @@
           <ul>
             <li>
               Philosophical Commitments to LLM Evaluations: The Problem of 
-                Moving Goalposts and Observational Relativity. AI & Humanity Lab Hong Kong.
-              <a href="https://www.youtube.com/watch?v=w6XTWLMip88" target="_blank" class="btn">Seminar Series 2025.</a>
+                Moving Goalposts and Observational Relativity.
+              <a href="https://www.youtube.com/watch?v=w6XTWLMip88" target="_blank" class="btn">AI & Humanity Lab Hong Kong Seminar Series 2025.</a>
             </li>
             <li>
               Learning and Sustaining Social Norms as Normative Equilibria.
