--- a/pages/work.html
+++ b/pages/work.html
@@ -47,12 +47,11 @@
           <h1>Recorded Talks</h1>
           <ul>
             <li>
-              Philosophical Commitments to LLM Evaluations: The Problem of 
-                Moving Goalposts and Observational Relativity.
+              <b>Philosophical Commitments to LLM Evaluations: The Problem of Moving Goalposts and Observational Relativity</b>.
               <a href="https://www.youtube.com/watch?v=w6XTWLMip88" target="_blank" class="btn">AI & Humanity Lab Hong Kong Seminar Series 2025.</a>
             </li>
             <li>
-              Learning and Sustaining Social Norms as Normative Equilibria.
+              <b>Learning and Sustaining Social Norms as Normative Equilibria</b>.
               <a href="https://www.youtube.com/watch?v=u4sAGSbXZqQ" target="_blank" class="btn">PIBBSS Symposium 2023.</a> 
             </li>
           </ul>
