--- a/pages/work.html
+++ b/pages/work.html
@@ -69,7 +69,7 @@
               <a href="https://diefreiheitsliebe.de/gesellschaft/meine-freunde-die-querdenker/" target="_blank" class="btn">Die Freiheitsliebe.</a>
             </li>
             <li>
-              Column Nelli Listens to Music. (<i>Org. German: Nelli hört Musik</i>).
+              Nelli Listens to Music — Column. (<i>Org. German: Nelli hört Musik</i>).
               <a href="https://www.kiezundkneipe.de/ressorts/kultur/nelli-hoert-musik" target="_blank" class="btn">Kiez und Kneipe Berlin.</a>
             </li>
           </ul>
