--- a/pages/work.html
+++ b/pages/work.html
@@ -65,12 +65,8 @@
               <a href="https://www.sciencenordic.com/artificial-intelligence-brain-computers/is-there-someone-behind-the-screen-researchers-are-divided-on-ai-consciousness/2482914" target="_blank" class="btn">ScienceNordic.</a>
             </li>
             <li>
-              My Friends, Anti-Vaxxers. (<i>German: Meine Freunde, die Querdenker</i>). 
+              Meine Freunde, die Querdenker (<i>Eng: My Friends, Anti-Vaxxers</i>). 
               <a href="https://diefreiheitsliebe.de/gesellschaft/meine-freunde-die-querdenker/" target="_blank" class="btn">Die Freiheitsliebe.</a>
-            </li>
-            <li>
-              Column: Nelli's Music. (<i>German: Nelli hört Musik</i>).
-              <a href="https://www.kiezundkneipe.de/ressorts/kultur/nelli-hoert-musik" target="_blank" class="btn">Kiez und Kneipe Berlin.</a>
             </li>
           </ul>
 
