--- a/pages/work.html
+++ b/pages/work.html
@@ -31,6 +31,18 @@
         <h1>Publications</h1>
           <ul>
             <li>
+              <b>Ninell Oldenburg</b> and Gleb Papyshev. 2025. <i>The Stories We Govern By: AI, Risk, 
+                and the Power of Imaginaries</i>. (Under review).
+            </li>
+            <li>
+              <b>Ninell Oldenburg</b>, Ruchira Dhar, and Anders Søgaard. 2025. <i>Do Scaling Laws Suggest 
+                Universal Intelligence? Philosophical Assumptions in AI Evaluations</i>. (Under review).
+            </li>
+            <li>
+              Ruchira Dhar, <b>Ninell Oldenburg</b>, and Anders Søgaard. 2025. <i>Measure Generality, 
+              Not Intelligenc</i>. (Under review).
+            </li>
+            <li>
               <b>Ninell Oldenburg</b> and Anders Søgaard. 2025. <i>Navigating the Informativeness-
                 Compression Trade-Off in XAI</i>. AI & Ethics (forthcoming).
             </li>
