--- a/pages/work.html
+++ b/pages/work.html
@@ -40,7 +40,7 @@
             </li>
             <li>
               Ruchira Dhar, <b>Ninell Oldenburg</b>, and Anders Søgaard. 2025. <i>Measure Generality, 
-              Not Intelligenc</i>. (Under review).
+              Not Intelligence</i>. (Under review).
             </li>
             <li>
               <b>Ninell Oldenburg</b> and Anders Søgaard. 2025. <i>Navigating the Informativeness-
