--- a/index.html
+++ b/index.html
@@ -28,9 +28,12 @@
             I'm a second-year PhD student at the <a href="https://cpaicopenhagen.wordpress.com/" 
             target="_blank">Center for Philosophy of AI</a> at the University of Copenhagen 
             supervised by <a href="https://anderssoegaard.github.io/" target="_blank">Anders Søgaard</a>. 
-            I'm interested in how computational models are embedded in our cultural and political world, what 
-            features they share with humans, and how we can make them cooperate with us! For this, I like to draw 
-            inspiration from related fields such as linguistics, explainability, or computational cognitive science.
+            I'm interested in how computational models are embedded in our social, cultural, and political world, what
+            we can learn about ourselves from the way we talk about and use them, and how we construct 
+            narratives about and around them!
+        </p>
+        <p>
+            For this, I like to draw inspiration from related fields such as cognitive science, linguistics, or sociology.
         </p>
         <p>
             Other than that, I like live music, running, & maps.
