--- a/pages/work.html
+++ b/pages/work.html
@@ -24,8 +24,13 @@
 
     <div class="container">
         <p>
-          I'm interested in the topic of understanding and cooperation and I like to look at it from different 
-          angles. This includes research, journalism, blogging, and art.
+          I'm primarily interested in the narratives around AI and what we can learn from it about ourselves. 
+          This includes questions like: Why are there so dratsically different views on the risks of AI?
+          How are the near-term and long-term visions of AI constructed, i.e., why should or shouldn't it 
+          have consciousness? And what is the actual and narrated use of the term "intelligence"?
+          
+          I like to look at these things from different angles and in different granularity. 
+          This includes research, journalism, blogging, and art.
         </p>
 
         <h1>Publications</h1>
