--- a/pages/work.html
+++ b/pages/work.html
@@ -25,12 +25,16 @@
     <div class="container">
         <p>
           I'm primarily interested in the narratives around AI and what we can learn from it about ourselves. 
-          This includes questions like: Why are there so dratsically different views on the risks of AI?
-          How are the near-term and long-term visions of AI constructed, i.e., why should or shouldn't it 
-          have consciousness? And what is the actual and narrated use of the term "intelligence"?
+          This includes questions like: 
+          <ul>
+            <li>Why are there so dratsically different views on the risks of AI?</li>
+            <li>How are the near-term and long-term visions of AI constructed, i.e., why should or shouldn't it 
+                have consciousness?</li>
+            <li>What is the actual and narrated use of the term "intelligence"?</li>
+          </ul>
           
           I like to look at these things from different angles and in different granularity. 
-          This includes research, journalism, blogging, and art.
+          This includes academic research, journalism, blogging, and art.
         </p>
 
         <h1>Publications</h1>
