--- a/pages/work.html
+++ b/pages/work.html
@@ -28,12 +28,10 @@
           This includes questions like: 
           
         <p>
-           - Why are there so dratsically different views on the risks of AI?
-
-           - How are the near-term and long-term visions of AI constructed, i.e., why should or shouldn't it 
-                have consciousness?
-
-            - What is the actual and narrated use of the term "intelligence"?
+           <b>+</b> Why are there so dratsically different views on the risks of AI?<br>
+           <b>+</b> How are the near-term and long-term visions of AI constructed, i.e., why should or shouldn't it 
+                have consciousness? <br>
+           <b>+</b> What is the actual and narrated use of the term "intelligence"?
         </p>
         <p>
           I like to look at these things from different angles and in different granularity. 
