--- a/index.html
+++ b/index.html
@@ -26,12 +26,18 @@
         <h1>Ninell (she)</h1>
         <p>
             I'm a second-year PhD student at the <a href="https://cpaicopenhagen.wordpress.com/" 
-            target="_blank">Center for Philosophy of AI</a> at the University of Copenhagen 
-            supervised by <a href="https://anderssoegaard.github.io/" target="_blank">Anders Søgaard</a>. 
-            I'm interested in how computational models are embedded in our social, cultural, and political world, what
-            we can learn about ourselves from the way we talk about and use them, and how we construct 
-            narratives about and around them!
-            For this, I like to draw inspiration from related fields such as cognitive science, linguistics, or sociology.
+            target="_blank">Center for Philosophy of AI</a> at the University of Copenhagen supervised 
+            by <a href="https://anderssoegaard.github.io/" target="_blank">Anders Søgaard</a>.
+
+            I'm interested in the narratives we construct around AI and what these reveal about ourselves. 
+            This means analyzing how computational models are embedded in our social, cultural, and 
+            political contexts, with particular focus on the stories we tell about technology's future 
+            to motivate present action.
+
+            More specifically, this includes questions like: Why do perspectives on AI risks differ so drastically? 
+            How do we construct visions of AI capabilities, particularly around concepts like consciousness? How 
+            does our use of terms like "intelligence" shape these narratives? Through this lens, I aim to contibute 
+            to helping guide more reflective and inclusive approaches to AI development and policy.
         </p>
         <p>
             Other than that, I like live music, running, & maps.
