--- a/pages/work.html
+++ b/pages/work.html
@@ -23,22 +23,8 @@
       </nav>
 
     <div class="container">
-        <p>
-          I'm primarily interested in the narratives around AI and what we can learn from it about ourselves. 
-          This includes questions like: 
-          
-        <p>
-           <b>+</b> Why are there so dratsically different views on the risks of AI?<br>
-           <b>+</b> How are the near-term and long-term visions of AI constructed, i.e., why should or shouldn't it 
-                have consciousness? <br>
-           <b>+</b> What is the actual and narrated use of the term "intelligence"?
-        </p>
-        <p>
-          I like to look at these things from different angles and in different granularity. 
-          This includes academic research, journalism, blogging, and art.
-        </p>
 
-        <h1>Publications</h1>
+        <h1>Research</h1>
           <ul>
             <li>
               <b>Ninell Oldenburg</b> and Gleb Papyshev. 2025. <i>The Stories We Govern By: AI, Risk, 
