--- a/index.html
+++ b/index.html
@@ -27,17 +27,19 @@
         <p>
             I'm a second-year PhD student at the <a href="https://cpaicopenhagen.wordpress.com/" 
             target="_blank">Center for Philosophy of AI</a> at the University of Copenhagen supervised 
-            by <a href="https://anderssoegaard.github.io/" target="_blank">Anders Søgaard</a>.
-
-            I'm interested in the narratives we construct around AI and what these reveal about ourselves. 
-            This means analyzing how computational models are embedded in our social, cultural, and 
-            political contexts, with particular focus on the stories we tell about technology's future 
-            to motivate present action.
-
-            More specifically, this includes questions like: Why do perspectives on AI risks differ so drastically? 
-            How do we construct visions of AI capabilities, particularly around concepts like consciousness? How 
-            does our use of terms like "intelligence" shape these narratives? Through this lens, I aim to contibute 
-            to helping guide more reflective and inclusive approaches to AI development and policy.
+            by <a href="https://anderssoegaard.github.io/" target="_blank">Anders Søgaard</a>. I'm interested 
+            in the narratives we construct around AI and what these reveal about our deeper values and concerns.
+        </p>
+        <p>
+            This means that I often ask questions like: Why do perspectives on AI risks differ so drastically? 
+            How do we construct visions of AI capabilities, e.g., around concepts like consciousness? And how 
+            does our use of terms like "intelligence" shape these narratives?
+        </p>
+        <p>
+            I think that carefully examining these narratives might give us a more holistic picture about what 
+            actually drives us to do certain types of research, in what way, and for which audience. Overall, 
+            I hope that this contributes to a more detailed and scrutinizable picture of what we're doing right 
+            and wrong, where our gaps are, and how to improve development and policy.
         </p>
         <p>
             Other than that, I like live music, running, & maps.
