--- a/pages/work.html
+++ b/pages/work.html
@@ -40,7 +40,8 @@
             </li>
             <li>
               <b>Ninell Oldenburg</b> and Anders Søgaard. 2025. <i>Navigating the Informativeness-
-                Compression Trade-Off in XAI</i>. AI & Ethics (forthcoming).
+                Compression Trade-Off in XAI</i>. AI & Ethics.
+                <a href="https://link.springer.com/article/10.1007/s43681-025-00733-5" target="_blank" class="btn">Springer</a> 
             </li>
             <li>
               <b>Ninell Oldenburg</b> and Tan Zhi-Xuan. 2024. <i>Learning and Sustaining Shared
