add ruchira paper

--- a/pages/work.html
+++ b/pages/work.html
@@ -39,6 +39,10 @@
               Not Intelligence</i>. (Under review).
             </li>
             <li>
+              Ruchira Dhar, <b>Ninell Oldenburg</b>, Stephanie Brandl. 2025. <i>Beyond Technocratic XAI: 
+                The Who, What & How in Explanation Design</i>. (Under review).
+            </li>
+            <li>
               <b>Ninell Oldenburg</b> and Anders Søgaard. 2025. <i>Navigating the Informativeness-
                 Compression Trade-Off in XAI</i>. AI & Ethics.
                 <a href="https://link.springer.com/article/10.1007/s43681-025-00733-5" target="_blank" class="btn">Springer</a> 
