--- a/pages/work.html
+++ b/pages/work.html
@@ -39,7 +39,7 @@
               Not Intelligence</i>. (Under review).
             </li>
             <li>
-              Ruchira Dhar, <b>Ninell Oldenburg</b>, Stephanie Brandl. 2025. <i>Beyond Technocratic XAI: 
+              Ruchira Dhar, <b>Ninell Oldenburg</b>, and Stephanie Brandl. 2025. <i>Beyond Technocratic XAI: 
                 The Who, What & How in Explanation Design</i>. (Under review).
             </li>
             <li>
