--- a/pages/work.html
+++ b/pages/work.html
@@ -46,6 +46,7 @@
               <b>Ninell Oldenburg</b> and Anders Søgaard. 2025. <i>Navigating the Informativeness-
                 Compression Trade-Off in XAI</i>. AI & Ethics.
                 <a href="https://link.springer.com/article/10.1007/s43681-025-00733-5" target="_blank" class="btn">Springer</a> 
+                <a href="https://link.springer.com/epdf/10.1007/s43681-025-00733-5?sharing_token=o8H9C5-qkdQmRTlMvTDstPe4RwlQNchNByi7wbcMAY5GWHrJ9kwvPzZ0LCOPxs7vSTajH49lvGE8M-q6rAWFASdL9oh90I1O4eZ8znCo8UtxYF_NMObqsKpgPb86oD1iGyByY9Ewyb1EdFZSqQr3QLAyzrz3FJcEIEP2ts6pAEk%3D" target="_blank" class="btn">PDF</a>
             </li>
             <li>
               <b>Ninell Oldenburg</b> and Tan Zhi-Xuan. 2024. <i>Learning and Sustaining Shared
