update group paper

--- a/pages/work.html
+++ b/pages/work.html
@@ -27,6 +27,11 @@
         <h1>Research</h1>
           <ul>
             <li>
+              Iwan Williams, <b>Ninell Oldenburg</b>, Ruchira Dhar, Joshua Hatherley, Constanza Fierro,
+              Nina Rajcic, Sandrine R. Schiller, Filippos Stamatiou, and Anders Søgaard. 2025. 
+              <i>Mechanistic Interpretability Needs Philosophy</i>. (Under review).
+            </li>
+            <li>
               <b>Ninell Oldenburg</b> and Gleb Papyshev. 2025. <i>The Stories We Govern By: AI, Risk, 
                 and the Power of Imaginaries</i>. (Under review).
             </li>
