--- a/pages/work.html
+++ b/pages/work.html
@@ -91,7 +91,7 @@
 
         <h1>Art</h1>
           <ul>
-            <li>2024. <i>Debates</i>. Work in progress ;) <a href="alignment/debates.html" target="_blank" class="btn">Link</a></li>
+            <li>2024. <i>Debates</i>. <a href="alignment/debates.html" target="_blank" class="btn">Link</a></li>
           </ul>
       </div>
     </div>
