--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
     <div class="container">
         <h1>Ninell (she)</h1>
         <p>
-            I'm a second-year PhD student at the <a href="https://cpaicopenhagen.wordpress.com/" 
-            target="_blank">Center for Philosophy of AI</a> at the University of Copenhagen supervised 
-            by <a href="https://anderssoegaard.github.io/" target="_blank">Anders Søgaard</a>. I'm interested 
-            in the narratives we construct around AI and what these reveal about our deeper values and concerns.
+            I'm a second-year PhD student at the Center for Philosophy of AI at the University of Copenhagen 
+            supervised by <a href="https://anderssoegaard.github.io/" target="_blank">Anders Søgaard</a>. 
+            I'm interested in the narratives we construct around AI and what these reveal about our deeper 
+            values and concerns.
         </p>
         <p>
             This means that I often ask questions like: Why do perspectives on AI risks differ so drastically? 
