--- a/pages/work.html
+++ b/pages/work.html
@@ -30,14 +30,15 @@
               Iwan Williams, <b>Ninell Oldenburg</b>, Ruchira Dhar, Joshua Hatherley, Constanza Fierro,
               Nina Rajcic, Sandrine R. Schiller, Filippos Stamatiou, and Anders Søgaard. 2025. 
               <i>Mechanistic Interpretability Needs Philosophy</i>. (Under review).
+              <a href="https://arxiv.org/abs/2506.18852" target="_blank" class="btn">Arxiv</a> 
             </li>
             <li>
               <b>Ninell Oldenburg</b> and Gleb Papyshev. 2025. <i>The Stories We Govern By: AI, Risk, 
                 and the Power of Imaginaries</i>. (Under review).
             </li>
             <li>
-              <b>Ninell Oldenburg</b>, Ruchira Dhar, and Anders Søgaard. 2025. <i>Do Scaling Laws Suggest 
-                Universal Intelligence? Philosophical Assumptions in AI Evaluations</i>. (Under review).
+              <b>Ninell Oldenburg</b>, Ruchira Dhar, and Anders Søgaard. 2025. <i>Two Conceptions of Intelligence: 
+                Why AI Researchers Disagree About Scaling Laws and Future Risk</i>. (Under review).
             </li>
             <li>
               Ruchira Dhar, <b>Ninell Oldenburg</b>, and Anders Søgaard. 2025. <i>Measure Generality, 
