--- a/pages/work.html
+++ b/pages/work.html
@@ -34,19 +34,18 @@
             </li>
             <li>
               <b>Ninell Oldenburg</b> and Gleb Papyshev. 2025. <i>The Stories We Govern By: AI, Risk, 
-                and the Power of Imaginaries</i>. (Under review).
+                and the Power of Imaginaries</i>. The 8th AAAI/ACM Conference on AI, Ethics, and Society. Madrid, Spain.
             </li>
             <li>
-              <b>Ninell Oldenburg</b>, Ruchira Dhar, and Anders Søgaard. 2025. <i>Two Conceptions of Intelligence: 
-                Why AI Researchers Disagree About Scaling Laws and Future Risk</i>. (Under review).
+              <b>Ninell Oldenburg</b>, Ruchira Dhar, and Anders Søgaard. 2025. <i>Realist and Pluralist Conceptions of Intelligence</i>. (Under review).
             </li>
             <li>
               Ruchira Dhar, <b>Ninell Oldenburg</b>, and Anders Søgaard. 2025. <i>Measure Generality, 
               Not Intelligence</i>. (Under review).
             </li>
             <li>
-              Ruchira Dhar, <b>Ninell Oldenburg</b>, and Stephanie Brandl. 2025. <i>Beyond Technocratic XAI: 
-                The Who, What & How in Explanation Design</i>. (Under review).
+              Ruchira Dhar, Stephanie Brandl, <b>Ninell Oldenburg</b>, and Anders Søgaard. 2025. <i>Beyond Technocratic XAI: 
+                The Who, What & How in Explanation Design</i>. The 8th AAAI/ACM Conference on AI, Ethics, and Society. Madrid, Spain.
             </li>
             <li>
               <b>Ninell Oldenburg</b> and Anders Søgaard. 2025. <i>Navigating the Informativeness-
