--- a/pages/work.html
+++ b/pages/work.html
@@ -40,6 +40,7 @@
             <li>
               Ruchira Dhar, Stephanie Brandl, <b>Ninell Oldenburg</b>, and Anders Søgaard. 2025. <i>Beyond Technocratic XAI: 
                 The Who, What & How in Explanation Design</i>. The 8th AAAI/ACM Conference on AI, Ethics, and Society. Madrid, Spain.
+                <a href="https://arxiv.org/abs/2508.09231" target="_blank" class="btn">Arxiv</a> 
             </li>
             <li>
               Iwan Williams, <b>Ninell Oldenburg</b>, Ruchira Dhar, Joshua Hatherley, Constanza Fierro,
