--- a/pages/work.html
+++ b/pages/work.html
@@ -27,20 +27,23 @@
         <h1>Research</h1>
           <ul>
             <li>
-              <b>Ninell Oldenburg</b> and Gleb Papyshev. 2025. <i>The Stories We Govern By: AI, Risk, 
-                and the Power of Imaginaries</i>. The 8th AAAI/ACM Conference on AI, Ethics, and Society. Madrid, Spain.
-            </li>
-            <li>
               <b>Ninell Oldenburg</b>, Ruchira Dhar, and Anders Søgaard. 2025. <i>Realist and Pluralist Conceptions of Intelligence</i>. (Under review).
             </li>
             <li>
               Ruchira Dhar, <b>Ninell Oldenburg</b>, and Anders Søgaard. 2025. <i>Measure Generality, 
               Not Intelligence</i>. (Under review).
             </li>
+             <li>
+              <b>Ninell Oldenburg</b> and Gleb Papyshev. 2025. <i>The Stories We Govern By: AI, Risk, 
+                and the Power of Imaginaries</i>. The 8th AAAI/ACM Conference on AI, Ethics, and Society. Madrid, Spain.
+                <a href="https://ojs.aaai.org/index.php/AIES/article/view/36686" target="_blank" class="btn">Proceedings</a> 
+                <a href="https://ojs.aaai.org/index.php/AIES/article/view/36686/38824" target="_blank" class="btn">PDF</a>
+            </li>
             <li>
               Ruchira Dhar, Stephanie Brandl, <b>Ninell Oldenburg</b>, and Anders Søgaard. 2025. <i>Beyond Technocratic XAI: 
                 The Who, What & How in Explanation Design</i>. The 8th AAAI/ACM Conference on AI, Ethics, and Society. Madrid, Spain.
-                <a href="https://arxiv.org/abs/2508.09231" target="_blank" class="btn">Arxiv</a> 
+                <a href="https://ojs.aaai.org/index.php/AIES/article/view/36586" target="_blank" class="btn">Proceedings</a> 
+                <a href="https://ojs.aaai.org/index.php/AIES/article/view/36586/38724" target="_blank" class="btn">PDF</a>
             </li>
             <li>
               Iwan Williams, <b>Ninell Oldenburg</b>, Ruchira Dhar, Joshua Hatherley, Constanza Fierro,
