--- a/pages/work.html
+++ b/pages/work.html
@@ -62,8 +62,8 @@
               Normative Systems via Bayesian Rule Induction in Markov Games</i>. In Proc.
               of the 23rd International Conference on Autonomous Agents and Multiagent
               Systems. University of Auckland, New Zealand.
-              <a href="https://arxiv.org/abs/2402.13399" target="_blank" class="btn">Arxiv</a> 
-              <a href="https://arxiv.org/pdf/2402.13399" target="_blank" class="btn">PDF</a>
+              <a href="https://dl.acm.org/doi/abs/10.5555/3635637.3663011" target="_blank" class="btn">Proceedings</a> 
+              <a href="https://www.ifaamas.org/Proceedings/aamas2024/pdfs/p1510.pdf" target="_blank" class="btn">PDF</a>
             </li>
           </ul>
 
