--- a/pages/work.html
+++ b/pages/work.html
@@ -50,6 +50,7 @@
               Nina Rajcic, Sandrine R. Schiller, Filippos Stamatiou, and Anders Søgaard. 2025. 
               <i>Mechanistic Interpretability Needs Philosophy</i>. (Under review).
               <a href="https://arxiv.org/abs/2506.18852" target="_blank" class="btn">Arxiv</a> 
+              <a href="https://arxiv.org/pdf/2506.18852" target="_blank" class="btn">PDF</a> 
             </li>
             <li>
               <b>Ninell Oldenburg</b> and Anders Søgaard. 2025. <i>Navigating the Informativeness-
