--- a/pages/work.html
+++ b/pages/work.html
@@ -27,11 +27,19 @@
         <h1>Research</h1>
           <ul>
             <li>
-              <b>Ninell Oldenburg</b>, Ruchira Dhar, and Anders Søgaard. 2025. <i>Realist and Pluralist Conceptions of Intelligence</i>. (Under review).
+              <b>Ninell Oldenburg</b> 2026. <i>Dismantling Masculine Epistemologies in Existential Risk</i>. (Under review).
             </li>
             <li>
-              Ruchira Dhar, <b>Ninell Oldenburg</b>, and Anders Søgaard. 2025. <i>Measure Generality, 
+              <b>Ninell Oldenburg</b>, Jacob Aarup Dalsgaard, Anders Søgaard, and Roberta Sinatra. 2026. 
+              <i>AI Risk Research Dataset</i>. (Under review).
+            </li>
+            <li>
+              Ruchira Dhar, <b>Ninell Oldenburg</b>, and Anders Søgaard. 2026. <i>Measure Generality, 
               Not Intelligence</i>. (Under review).
+            </li>
+            <li>
+              <b>Ninell Oldenburg</b>, Ruchira Dhar, and Anders Søgaard. 2026. <i>Realist and Pluralist Conceptions of Intelligence 
+                and Their Implications on AI Research. </i>. In Proceedings of the AAAI Conference on Artificial Intelligence.
             </li>
              <li>
               <b>Ninell Oldenburg</b> and Gleb Papyshev. 2025. <i>The Stories We Govern By: AI, Risk, 
